--- a/wp-content/themes/twentythirteen/style.css
+++ b/wp-content/themes/twentythirteen/style.css
@@ -3386,11 +3386,11 @@ display: inline-block;
 
 #section2 .social  .iconSocial {position: relative;z-index: 10;}
 
-#section2 .social a.iconSocial.twitter {
+#section2 .social .iconSocial.twitter {
 	background: url('images/icon-tw-blue.png') no-repeat top left;
 }
 
-#section2 .social a.iconSocial.facebook {
+#section2 .social .iconSocial.facebook {
 	background: url('images/icon-FB-blue.png') no-repeat top left;
 }
 #section2 .title_section {
@@ -3524,15 +3524,15 @@ display: inline-block;
 }
 #section4 .container {position: relative;}
 
-#section3 .social a.iconSocial.twitter,
-#section4 .social a.iconSocial.twitter {
+#section3 .social .iconSocial.twitter,
+#section4 .social .iconSocial.twitter {
 	background: url('images/icon-tw-gray.png') no-repeat top left;
 	width: 47px;
 	height: 47px;
 }
 
-#section3 .social a.iconSocial.facebook,
-#section4 .social a.iconSocial.facebook {
+#section3 .social .iconSocial.facebook,
+#section4 .social .iconSocial.facebook {
 	background: url('images/icon-FB-gray.png') no-repeat top left;
 	width: 20px;
 	height: 42px;
@@ -3672,18 +3672,19 @@ text-align: right;
 }
 
 
-#section5 .social a.iconSocial.twitter {
+#section5 .social .iconSocial.twitter {
 	background: url('images/icon-tw-yellow.png') no-repeat top left;
 	width: 39px;
 	height: 40px;
 }
 
-#section5 .social a.iconSocial.facebook {
+#section5 .social .iconSocial.facebook {
 	background: url('images/icon-FB-yellow.png') no-repeat top left;
 	width: 21px;
 	height: 44px;
 }
 
+ .social  a ,* {outline: none!important;}
 #section5 nav ul li a {
 	color: #bbbdbf;
 }
@@ -3731,7 +3732,7 @@ text-align: right;
 	text-align: left;
 	width: 230px;
 	padding: 10px;
-	margin-left: 3px;
+	margin-left: 5px;
 }
 
 #section5 .su-row .su-column .colgroup .col+.col {
@@ -3763,11 +3764,17 @@ text-align: right;
 	background: url('images/dotted-light.png') repeat-y  40px top;
 	margin-top: 20px;
 }
-
+div.wpcf7-validation-errors {clear:both;}
 span.wpcf7-not-valid-tip {
-    left: 3px;
-    top: -10px;
-	padding:8px;
+    color: #FF0000;
+    font-size: 10px;
+    height: 34px;
+    left: 5px;
+    padding: 2px 6px;
+    text-align: left;
+    text-decoration: none;
+    text-transform: capitalize;
+    top: -10px; line-height: 29px;
     width: 225px;
 }
 div.wpcf7-validation-errors {border: none; color: #FF0000;}
