--- a/wp-content/themes/twentythirteen/style.css
+++ b/wp-content/themes/twentythirteen/style.css
@@ -3699,12 +3699,18 @@ display: inline-block;
     padding-top: 79px;
    
 }
+.colgroup .col {
 
-.title_section h3 {
- text-transform: uppercase;
  font-family: "Conv_Futura-CondensedExtraBold";
 }
-	
+.title_section h3 {
+ text-transform: uppercase;
+ text-shadow: 0 0 1px rgba(0,0,0,0.3);
+ font-family: "Conv_Futura-CondensedExtraBold";
+}
+* {
+ -webkit-font-smoothing:antialiased;
+}
 #section5 .title_section {
 	overflow: hidden;
 }
@@ -3766,13 +3772,12 @@ text-align: right;
 
 #section5 .su-row .su-column .colgroup .col{
 	width: 120px;
-	font-size: 12px;
+	font-size: 11.5px;
 	text-transform: uppercase;
 	display: inline-block;
 	color: #fff;
 	text-align: right;
 	padding-right: 5px;
-	font-weight: bold;
 }
 #section5 .su-row .su-column .colgroup {
 	float: left;
