update bug responsive

--- a/wp-content/themes/twentythirteen/style.css
+++ b/wp-content/themes/twentythirteen/style.css
@@ -848,6 +848,9 @@ img.wp-smiley,
 	width: 1080px;
 	margin: 0 auto;
 }
+.body,.page,.site {
+	min-width: 1180px;
+}
 
 .site-header .home-link {
 	color: #141412;
